# sovyx

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile  FOLLOWUPS.md  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  sovyx.service
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  empirical_review.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish.yml
.hypothesis/constants/: 577835aeae9ba5c8  7d10420c73ce8d54  dee333a2be2cb1a4
benchmarks/: bench_brain.py  bench_cogloop.py  bench_context.py  bench_memory.py  bench_observability.py  bench_startup.py  log_noise_baseline.json
dashboard/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.test.json  tsconfig.test.tsbuildinfo  vite.config.ts  vitest.config.ts
dashboard/qa-screenshots/: VISUAL-QA-REPORT.md
dashboard/scripts/: test-lint-rule.mjs  test-lint-rule.test.ts
dashboard/src/: App.tsx  a11y-expanded.test.ts  a11y.test.ts  index.css  main.tsx  router.test.tsx  router.tsx  vite-env.d.ts
docs/: SOVYX-BIBLE.md  V10-SECURITY-ARCHITECTURE.md  api-reference.md  api.md  architecture.md  audio-quality.md  brain-architecture.md  cli-reference.md  compliance.md  configuration.md  contributing.md  dashboard-quickstart.md  dashboard-smoke-test-checklist.md  faq.md  financial-math-plugin.md  getting-started.md  index.md  llm-router.md  model-mirrors.md  observability.md  plugin-developer-guide.md  plugins.md  quickstart.md  roadmap.md  scoring-tuning.md  security.md  upgrade.md  voice-setup-linux-mint.md  voice.md  web-intelligence-plugin.md
docs-internal/_meta/: audit_coverage.py  audit_quality.py  consistency-audit-A.md  consistency-audit-B.md  consistency-audit-C.md  consistency-audit.md  coverage-audit.md  enterprise-audit-backend.md  enterprise-audit-fe-part-A.md  enterprise-audit-fe-part-B.md  enterprise-audit-fe-part-C.md  enterprise-audit-fe-part-D.md  enterprise-audit-final.md  enterprise-audit-frontend.md  enterprise-audit-part-A.md  enterprise-audit-part-B.md  enterprise-audit-part-C.md  enterprise-audit-part-D.md  enterprise-audit-part-E.md  enterprise-audit-post-sprint4.md  gap-analysis.md  quality-audit-raw.md  quality-audit.md  source-mapping.md
docs-internal/architecture/: cognitive-loop.md  overview.md
docs-internal/development/: anti-patterns.md  ci-pipeline.md  contributing.md  testing.md
docs-internal/modules/: benchmarks.md  brain.md  bridge.md  cli.md  cloud.md  cognitive.md  context.md  dashboard.md  engine.md  llm.md  mind.md  observability.md  persistence.md  plugins.md  upgrade.md  voice.md
docs-internal/planning/: gtm-strategy.md  milestones.md  roadmap.md
docs-internal/research/: competitive-analysis.md  embedding-strategies.md  llm-landscape.md  memory-systems.md
docs-internal/security/: threat-model.md
docs/_meta/: gap-analysis.md  triage-index.md
docs/adr/: ADR-002-observability-fixes.md
docs/architecture/: brain-graph.md  data-flow.md  llm-router.md
docs/contributing/: voice-kb-rotation.md  voice-mixer-kb-profiles.md  voice-wake-words.md
docs/development/: ci-pipeline.md  contributing.md  testing.md
docs/migration/: voice-mixer-band-aid-removal.md
docs/modules/: benchmarks.md  brain.md  bridge.md  cli.md  cloud.md  cognitive.md  context.md  dashboard-distribution-integrity.md  dashboard.md  engine.md  licensing.md  llm-provider-integrity.md  llm.md  mind.md  observability.md  persistence.md  plugins.md  upgrade.md  voice-calibration.md  voice-capture-health.md  voice-device-test.md  voice-otel-semconv.md  voice-platform-parity.md  voice-privacy.md  voice-setup.md  voice-troubleshooting-linux.md  voice-troubleshooting-macos.md  voice-troubleshooting-windows.md  voice.md
docs/operations/: resource-hygiene.md
docs/planning/: gtm-strategy.md  milestones.md  roadmap.md
docs/research/: competitive-analysis.md  embedding-strategies.md  llm-landscape.md  memory-systems.md
docs/runbooks/: observability_rollback.md
docs/security/: best-practices.md  obsidian-protocol.md  threat-model.md
packaging/: README.md
packaging/systemd/: audio-runtime-pm-setup  sovyx-audio-mixer-persist.service  sovyx-audio-runtime-pm.service
packaging/udev/: 60-sovyx-audio-power.rules  sovyx-audio-power-setone
scripts/: PILOT_RUN_INSTRUCTIONS_WIN.md  _gen_log_schemas.py  audit.sh  check.sh  check_exception_chains.py  check_log_noise.py  check_log_schemas.py  check_metrics_cardinality.py  check_otel_semconv.py  check_perf_regression.py  check_test_pii.py  diagnose-voice-capture-test.ps1  diagnose-voice-windows.ps1  install.sh  pre-release.sh  sovyx-voice-diag-bootstrap.sh  update_log_noise_baseline.py  verify_gates.sh  voice-diag-pipewire-deep.sh  voice-diag-pipewire.sh  voice-diag-wasapi-comparator.py  voice-recover-mic-v2.sh  voice-recover-mic.sh
scripts/dev/: analyze_c1_telemetry.py  analyze_c4_telemetry.py  analyze_c5_telemetry.py  analyze_h3_telemetry.py  analyze_h4_telemetry.py  check_boundary_helper_real.py  check_boundary_round_trip_coverage.py  check_dashboard_bundle_integrity.py  check_name_lock_integrity.py  check_platform_neutral_event_names.py  check_quarantine_reason_discipline.py  check_resource_hygiene_discipline.py  check_response_model_presence.py  check_zod_twin_completeness.py  generate_calibration_signing_key.py  generate_kb_signing_key.py  sign_kb_profile.py
scripts/mac/: PILOT_RUN_INSTRUCTIONS_MAC.md  coreaudio-dump.swift  hal-plugin-classifier.sh  sovyx-voice-diag-mac.sh  tcc-mic-reader.py
scripts/soak/: run-frame-pipeline-soak.py
src/sovyx/: __init__.py  __main__.py  license.py  tiers.py
tests/: __init__.py  _loopback_fixtures.py  _voice_audio_fixtures.py  conftest.py  test_docs_smoke.py
tests/dashboard/: _boundary_helpers.py  conftest.py  test_activity.py  (+69 more)
tools/: lint_audio_callback.py  lint_imm_callbacks.py  voice_diag_triage.py
(+2560 files in other folders)
