[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sovyx"
version = "0.12.1"
description = "Sovereign Minds Engine — Persistent AI companion with real memory"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Guipe", email = "guipe@sovyx.ai" },
]
keywords = ["ai", "companion", "memory", "cognitive", "brain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "sqlite-vec>=0.1.3",
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "tiktoken>=0.7",
    "aiogram>=3.4",
    "telegramify-markdown>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "structlog>=24.1",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "httpx>=0.27",
    "psutil>=5.9",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34",
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
    "PyJWT>=2.8",
    "icalendar>=5.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
plugins = [
    "watchdog>=4.0",
]
search = [
    "ddgs>=9.0",
    "trafilatura>=2.0",
]
cloud = [
    "boto3>=1.34",
    "litellm>=1.40",
    "stripe>=8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "mypy>=1.9",
    "ruff>=0.15,<0.16",
    "bandit>=1.7",
    "types-PyYAML>=6.0",
    "types-psutil>=5.9",
]

[dependency-groups]
dev = ["sovyx[dev]"]
docs = [
    "mkdocs-material>=9.7.6",
]

[project.scripts]
sovyx = "sovyx.cli.main:app"

[project.entry-points."sovyx.plugins"]
financial-math = "sovyx.plugins.official.financial_math:FinancialMathPlugin"
web-intelligence = "sovyx.plugins.official.web_intelligence:WebIntelligencePlugin"
knowledge = "sovyx.plugins.official.knowledge:KnowledgePlugin"
home-assistant = "sovyx.plugins.official.home_assistant:HomeAssistantPlugin"
caldav = "sovyx.plugins.official.caldav:CalDAVPlugin"

[project.urls]
Homepage = "https://sovyx.ai"
Repository = "https://github.com/sovyx-ai/sovyx"
Documentation = "https://docs.sovyx.ai"

[tool.hatch.build.targets.sdist]
exclude = [
    "dashboard/node_modules",
    ".context",
    "benchmarks/.benchmarks",
    "site",
    ".venv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sovyx"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "sovyx.plugins.hot_reload"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "telegramify_markdown.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "zeroconf.*",
    "onnxruntime.*",
    "piper_phonemize.*",
    "moonshine_voice.*",
    "sounddevice.*",
    "litellm.*",
    "boto3.*",
    "kokoro_onnx.*",
    "tokenizers.*",
    "watchdog.*",
    "ddgs.*",
    "trafilatura.*",
    "dateutil.*",
    "icalendar.*",
    "defusedxml.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH", "BLE"]

[tool.ruff.lint.per-file-ignores]
"src/sovyx/cognitive/safety_i18n.py" = ["E501"]
"tests/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN401", "E501", "N806", "N817", "B017", "TC003", "SIM114", "E402", "UP007", "UP045", "F841", "BLE001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "no_islands: brain graph connectivity regression tests",
]

[tool.coverage.run]
source = ["sovyx"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B104", "B105", "B106", "B110", "B311", "B404", "B603", "B607", "B608"]
